# afr

./: .env.example  .gitignore  README.md  config.ini.example  pyproject.toml  setup.py
deploy/nginx/: afr-miniapi.conf
deploy/systemd/: afr-miniapi.service  afr-pusher.service  afr-pusher.timer
miniapp/: README.md  app.js  app.json  app.wxss  config.js  project.config.json  project.private.config.json
miniapp/pages/detail/: detail.js  detail.wxml  detail.wxss
miniapp/pages/index/: index.js  index.wxml  index.wxss
miniapp/utils/: api.js  time.js
scripts/: send.sh
src/afr_pusher/: __init__.py  auth.py  cli.py  config.py  message.py  miniapp_api.py  models.py  pipeline.py  preview.py  store.py
src/afr_pusher/fetchers/: afr.py
src/afr_pusher/senders/: __init__.py  base.py  desktop_script.py  router.py  telegram.py  wecom.py
src/afr_pusher/translators/: __init__.py  base.py  deepl.py  factory.py  noop.py
tests/: test_auth.py  test_cli_args.py  test_cli_router.py  test_cli_schedule.py  test_config.py  test_config_examples.py  test_desktop_sender.py  test_fetcher_extract.py  test_launchd_cli.py  test_message.py  test_miniapp_api.py  test_pipeline_batch.py  test_router.py  test_store.py  test_telegram_sender.py  test_translator_factory.py  test_wecom_sender.py
