[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "afr-pusher"
version = "0.1.0"
description = "Fetch AFR news, translate to English, and deliver to WeChat channels"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
  "Pillow>=10.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]

[project.scripts]
afr-pusher = "afr_pusher.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
